lignes ble from um ok
maintenant travail sur les images & fichiers dans les ble

--- a/djangoproject/gestion_stock/templates/base_generic.html
+++ b/djangoproject/gestion_stock/templates/base_generic.html
@@ -9,6 +9,7 @@
 
   {% load staticfiles %}
   {% load fontawesome_5 %}
+  {% load crispy_forms_tags %}
 
   {% load static %}
   {% fontawesome_5_static %}
@@ -36,6 +37,9 @@
   -->
 </header>
 <style>
+  .asteriskField {
+    display: none;
+  }
   .custom-combobox {
     position: relative;
     display: inline-block;
