--- a/djangoproject/gestion_stock/templates/bonCommandeSortie.html
+++ b/djangoproject/gestion_stock/templates/bonCommandeSortie.html
@@ -69,7 +69,7 @@
                         {% for items in bcs %}
                         <tr>
                             <td> <button type="button" id='{{ items.idBonCommandeSortie }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></td>
-                            <td> {{ items.fk_Destinataire.fk_TypeDestinataire.nom }} </td>
+                            <td> {{ items.fk_Client.nom }} </td>
                             <td> {{ items.fk_Destinataire.codeUM }} </td>
                             <td> {{ items.dateCommande }} </td>
                             <td> {{ items.numeroCommande }} </td>
