--- a/djangoproject/gestion_stock/templates/bonlivraisonentreemodify.html
+++ b/djangoproject/gestion_stock/templates/bonlivraisonentreemodify.html
@@ -239,7 +239,7 @@
                                     var name = "{{ items.nom|safe }}";
                                     var oldname;
                                     "{% for ble in entree %}"
-                                    "{% if ble.fk_Destinataire.fk_TypeDestinataire.nom == items.fk_TypeDestinataire.nom %}"
+                                    "{% if ble.fk_Client.fk_TypeDestinataire.nom == items.fk_TypeDestinataire.nom %}"
                                     if (i == 0)
                                         $("#litiges").append(new Option("{{ items.nom|safe }}", "{{ items.nom|safe }}"));
                                     else if (name != oldname)
@@ -293,15 +293,61 @@
                                     <form action="/upload_blef/?" method="POST" enctype="multipart/form-data" class="form-horizontal">
                                         {% csrf_token %}
                                         <div class="form-group">
-                                            <p style="cursor: pointer;">fichier <i class="fa fa-file"></i></p>
+                                            <p>fichier <i style="cursor: pointer;" class="fa fa-file" id="fichpop"></i></p>
                                             <div class="col-auto">
                                                 <input type="file" name="fichier" id="file" required="True" class="form-control-file">
                                             </div>
-                                            <p>photo <i class="far fa-image"></i></p>
+                                            <p>photo <i style="cursor: pointer;" class="far fa-image" id="photopop"></i></p>
                                             <div class="col-auto">
                                                 <input type="file" name="photo" id="photo" required="True" class="form-control-file">
                                             </div>
                                         </div>
+                                        {% for items in entree %}
+                                            {% if items.idBonLivraisonEntree == id%}
+                                                {% if items.fichier %}
+                                                <img id="imgfichier" src="{{ items.fichier.url }}" >
+                                        <script>
+                                            $('#imgfichier').hide();
+                                            $("#fichpop").css("color", "green");
+                                            $('#fichpop').click(function () {
+                                                var src = $('#imgfichier').attr('src');
+                                                $('<div>').css({
+                                                    background: 'RGBA(0,0,0,.5) url('+src+') no-repeat center',
+                                                    backgroundSize: 'contain',
+                                                    width:'100%', height:'100%',
+                                                    position:'fixed',
+                                                    zIndex:'10000',
+                                                    top:'0', left:'0',
+                                                    cursor: 'zoom-out'
+                                                }).click(function(){
+                                                    $(this).remove();
+                                                }).appendTo('body');
+                                            });
+                                        </script>
+                                                {% endif %}
+                                                {% if items.photo %}
+                                                <img id="imgphoto" src="{{ items.photo.url }}" hidden>
+                                        <script>
+                                            $("#photopop").css("color", "green");
+                                            $('#photopop').click(function () {
+                                            var src = $('#imgphoto').attr('src');
+                                            $('<div>').css({
+                                                background: 'RGBA(0,0,0,.5) url('+src+') no-repeat center',
+                                                backgroundSize: 'contain',
+                                                width:'100%', height:'100%',
+                                                position:'fixed',
+                                                zIndex:'10000',
+                                                top:'0', left:'0',
+                                                cursor: 'zoom-out'
+                                            }).click(function(){
+                                                $(this).remove();
+                                            }).appendTo('body');
+                                            });
+
+                                        </script>
+                                        {% endif %}
+                                        {% endif %}
+                                        {% endfor %}
                                         <div class="form-group">
                                             <div class="col-md-3 col-sm-3 col-xs-12 col-md-offset-3" style="margin-bottom:10px;">
                                                 <button class="btn btn-primary btn-sm">
@@ -400,9 +446,7 @@
     <br>
     <script>
         $(document).ready(function() {
-
             $('');
-
             $("#back-row").click(function () {
                 location.href = "{% url 'bonLivraisonEntree' %}";
             });
